tests/transpiler/x/fortran/partial_application.error
error[I008]: cannot apply operator '+' to types null and null
  --> /workspace/mochi/tests/vm/valid/partial_application.mochi:2:12

  2 |   return a + b
    |            ^

help:
  Use compatible types for the operator.